--- a/text.html
+++ b/text.html
@@ -1,73 +1,23 @@
 <html>
 	<head>
-		<title>Test</title>
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAaFaKj83xXxt4kvSi6AYp05y0XDPidiTg&libraries=places"></script>
+		<style type="text/css">
+			.test {
+				width: 4in;
+				height: 10in;
+				background-color: blue;
+			}
+			@media print {
+				.test {page-break-after: always;}
+			}
+		</style>
 	</head>
 	<body>
-		<input id="pac-input" style="width: 100%">
-		<div id="map" style="height:400px; width: 100%"></div>
-		
+		<div class="test">
+
+		</div>
+		<div class="test" style="background-color:red">
+
+		</div>
 	</body>
-	<script>
-		function initialize() {
-		  var mapOptions = {
-			center: {lat: 33.8688, lng: 151.2195},
-			zoom: 1,
-			scrollwheel: false,
-			mapTypeControl: false,
-		  };
-		  var map = new google.maps.Map(document.getElementById('map'),
-			mapOptions);
-
-		  var input = /** @type {HTMLInputElement} */(
-			  document.getElementById('pac-input'));
-
-		  // Create the autocomplete helper, and associate it with
-		  // an HTML text input box.
-		  var autocomplete = new google.maps.places.Autocomplete(input);
-		  autocomplete.bindTo('bounds', map);
-
-		  map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
-
-		  var infowindow = new google.maps.InfoWindow();
-		  var marker = new google.maps.Marker({
-			map: map
-		  });
-		  google.maps.event.addListener(marker, 'click', function() {
-			infowindow.open(map, marker);
-		  });
-
-		  // Get the full place details when the user selects a place from the
-		  // list of suggestions.
-		  google.maps.event.addListener(autocomplete, 'place_changed', function() {
-			infowindow.close();
-			var place = autocomplete.getPlace();
-			if (!place.geometry) {
-			  return;
-			}
-
-			if (place.geometry.viewport) {
-			  map.fitBounds(place.geometry.viewport);
-			} else {
-			  map.setCenter(place.geometry.location);
-			  map.setZoom(17);
-			}
-
-			// Set the position of the marker using the place ID and location.
-			marker.setPlace(/** @type {!google.maps.Place} */ ({
-			  placeId: place.place_id,
-			  location: place.geometry.location
-			}));
-			marker.setVisible(true);
-
-			infowindow.setContent('<div><strong>' + place.name + '</strong><br>' +
-				'Place ID: ' + place.place_id + '<br>' +
-				place.formatted_address + '</div>');
-			infowindow.open(map, marker);
-		  });
-		}
-
-		// Run the initialize function when the window has finished loading.
-		google.maps.event.addDomListener(window, 'load', initialize);
 	</script>
 </html>
